--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Elle Pope</title>
-  <base href="/">
+  <base href="https://www.missellepope.com/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
   <link href="assets/font-awesome/fontawesome-all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Courgette|Dosis:700|Roboto+Condensed" rel="stylesheet">
 
@@ -14,12 +14,12 @@
   <meta name="theme-color" content="#02c9bb">
 
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <link href="images/icon-apple-120.png" rel="apple-touch-icon" />
-  <link href="images/icon-apple-152.png" rel="apple-touch-icon" sizes="152x152" />
-  <link href="images/icon-apple-167.png" rel="apple-touch-icon" sizes="167x167" />
-  <link href="images/icon-apple-180.png" rel="apple-touch-icon" sizes="180x180" />
-  <link href="images/icon-android-192.png" rel="icon" sizes="192x192" />
-  <link href="images/icon-android-128.png" rel="icon" sizes="128x128" />
+  <link href="assets/images/icon-apple-120.png" rel="apple-touch-icon" />
+  <link href="assets/images/icon-apple-152.png" rel="apple-touch-icon" sizes="152x152" />
+  <link href="assets/images/icon-apple-167.png" rel="apple-touch-icon" sizes="167x167" />
+  <link href="assets/images/icon-apple-180.png" rel="apple-touch-icon" sizes="180x180" />
+  <link href="assets/images/icon-android-192.png" rel="icon" sizes="192x192" />
+  <link href="assets/images/icon-android-128.png" rel="icon" sizes="128x128" />
 </head>
 <body>
   <app-root></app-root>
