feat: new color for mobile address bar

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="theme-color" content="#02c9bb">
+  <meta name="theme-color" content="#02c6c9">
 
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link href="assets/images/icon-apple-120.png" rel="apple-touch-icon" />
