--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109864306-2"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109864306-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'UA-109864306-2');
-  </script>
+  </script> -->
 
   <meta charset="utf-8">
   <title>Elle Pope</title>
-  <base href="https://www.missellepope.com/">
+  <!-- <base href="https://www.missellepope.com/"> -->
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="assets/font-awesome/fontawesome-all.min.css" rel="stylesheet">
@@ -23,15 +24,18 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#02c6c9">
 
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <link href="assets/images/icon-apple-120.png" rel="apple-touch-icon" />
-  <link href="assets/images/icon-apple-152.png" rel="apple-touch-icon" sizes="152x152" />
-  <link href="assets/images/icon-apple-167.png" rel="apple-touch-icon" sizes="167x167" />
-  <link href="assets/images/icon-apple-180.png" rel="apple-touch-icon" sizes="180x180" />
-  <link href="assets/images/icon-android-192.png" rel="icon" sizes="192x192" />
-  <link href="assets/images/icon-android-128.png" rel="icon" sizes="128x128" />
+  <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+  <link href="assets/images/icon-apple-120.png" rel="apple-touch-icon"/>
+  <link href="assets/images/icon-apple-152.png" rel="apple-touch-icon" sizes="152x152"/>
+  <link href="assets/images/icon-apple-167.png" rel="apple-touch-icon" sizes="167x167"/>
+  <link href="assets/images/icon-apple-180.png" rel="apple-touch-icon" sizes="180x180"/>
+  <link href="assets/images/icon-android-192.png" rel="icon" sizes="192x192"/>
+  <link href="assets/images/icon-android-128.png" rel="icon" sizes="128x128"/>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
