--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109864306-2"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109864306-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'UA-109864306-2');
-  </script> -->
+  </script>
 
   <meta charset="utf-8">
   <title>Elle Pope</title>
-  <!-- <base href="https://www.missellepope.com/"> -->
-  <base href="/">
+  <base href="https://www.missellepope.com/">
+  <!-- <base href="/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="assets/font-awesome/fontawesome-all.min.css" rel="stylesheet">
